# genie

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  DevelopLog  DeviceBitPackingCodec_8cu.html  DeviceBitPackingCodec_8cu_source.html  DeviceBitPackingCodec_8h.html  DeviceBitPackingCodec_8h.js  DeviceBitPackingCodec_8h_source.html  DeviceBitPackingHelpers_8cu.html  DeviceBitPackingHelpers_8cu.js  DeviceBitPackingHelpers_8cu_source.html  DeviceBitPackingHelpers_8h.html  DeviceBitPackingHelpers_8h.js  DeviceBitPackingHelpers_8h_source.html  DeviceCodecFactory_8cu.html  DeviceCodecFactory_8cu.js  DeviceCodecFactory_8cu_source.html  DeviceCodecFactory_8h.html  DeviceCodecFactory_8h.js  DeviceCodecFactory_8h_source.html  DeviceCodecs_8cu.html  DeviceCodecs_8cu_source.html  DeviceCodecs_8h.html  DeviceCodecs_8h.js  DeviceCodecs_8h_source.html  DeviceCompositeCodec_8cu.html  DeviceCompositeCodec_8cu_source.html  DeviceCompositeCodec_8h.html  DeviceCompositeCodec_8h_source.html  DeviceDeltaHelper_8h.html  DeviceDeltaHelper_8h_source.html  DeviceSerialCodec_8cu.html  DeviceSerialCodec_8cu_source.html  DeviceSerialCodec_8h.html  DeviceSerialCodec_8h.js  DeviceSerialCodec_8h_source.html  DeviceVarintCodec_8cu.html  DeviceVarintCodec_8cu.js  (+586 more)
doc/: CMakeLists.txt  doxy.config  doxy.in  mainpage.dox
doc/html/: FileReader_8h_source.html  Logger_8h_source.html  Timing_8h_source.html  annotated.html  classGPUGenie_1_1cpu__bad__alloc-members.html  classGPUGenie_1_1cpu__bad__alloc.html  classGPUGenie_1_1cpu__runtime__error-members.html  classGPUGenie_1_1cpu__runtime__error.html  classGPUGenie_1_1genie__error-members.html  classGPUGenie_1_1genie__error.html  classGPUGenie_1_1gpu__bad__alloc-members.html  classGPUGenie_1_1gpu__bad__alloc.html  classGPUGenie_1_1gpu__runtime__error-members.html  classGPUGenie_1_1gpu__runtime__error.html  classGPUGenie_1_1inv__list-members.html  classGPUGenie_1_1inv__list.html  classGPUGenie_1_1inv__table-members.html  classGPUGenie_1_1inv__table.html  classGPUGenie_1_1query-members.html  classGPUGenie_1_1query.html  classLogger-members.html  classLogger.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ca06b39efc5497340cedbb398ca1fe8b.html  files.html  functions.html  functions_func.html  functions_vars.html  genie__errors_8h_source.html  globals.html  globals_type.html  heap__count_8h_source.html  hierarchy.html  index.html  interface_8h_source.html  inv__list_8h_source.html  inv__table_8h.html  inv__table_8h_source.html  knn_8h_source.html  (+20 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  (+27 more)
doc/style/: custom.css
example/: CMakeLists.txt  README.md  ReadMe  example.cu  example_1st_level_interface.cc  example_2nd_level_interface.cc  example_2nd_level_interface.cu  example_adaptiveThreshold.cu  example_sift.cc  example_sift.cu  example_sift_binary.cu  example_sift_multi_table.cu  example_sift_subsequence.cc  example_sift_subsequence.cu  example_table_from_file.cu  example_tweets.cu  example_tweets_binary.cu  general_test.cu  generator.py  inv_list.cu  inv_list.d  inv_match.cu  inv_match.d  inv_topk.cu  inv_topk.d  makefile  makefile~  raw_data.cu  sift_test_1k.csv  verify.py
perf/: CMakeLists.txt  TableAnalyzer.hpp  compression.cu  table_analyzer.hpp
src/: CMakeLists.txt  CTestTestfile.cmake  DevelopLog  GPUGenie.h  GaLG.h  Makefile  raw_data.cc  raw_data.h
src/DistGenie/: .main.cu.swp  CMakeLists.txt  DistGenie.h  config.h  container.h  file.cu  file.h  global.h  main.cu  offline.cu  online.cu  parser.cu  parser.h  scheduler.cc  scheduler.h  search.cu  search.h  sorting.cc  sorting.h  test.cc  test.h
src/GPUGenie/: DeviceBinaryPacking.h  DeviceBitPackingCodec.cu  DeviceBitPackingCodec.h  DeviceBitPackingHelpers.cu  DeviceBitPackingHelpers.h  DeviceCodecFactory.cu  DeviceCodecFactory.h  DeviceCodecTemplatesImpl.hpp  DeviceCodecs.cu  DeviceCodecs.h  DeviceCompositeCodec.cu  DeviceCompositeCodec.h  DeviceDeltaHelper.h  DeviceSerialCodec.cu  DeviceSerialCodec.h  DeviceVarintCodec.cu  DeviceVarintCodec.h  FileReader.cc  FileReader.cu  FileReader.h  Logger.cc  Logger.cpp  Logger.cu  Logger.h  PerfLogger.hpp  Timing.cc  Timing.h  configure.h  configure.h.in  genie.cu  genie_errors.cu  genie_errors.h  heap_count.cu  heap_count.h  interface.cu  interface.h  inv_compr_table.cu  inv_compr_table.h  inv_list.cc  inv_list.cu  (+28 more)
src/GaLG/: FileReader.cc  FileReader.cpp  FileReader.h  interface.cu  interface.h  inv_list.cc  inv_list.h  inv_table.cc  inv_table.h  knn.cu  knn.h  match.cu  match.h  matcher.cc  matcher.h  query.cc  query.h  raw_data.cc  raw_data.h  topk.cu  topk.h
src/cli_genie/: CMakeLists.txt
src/container/: raw_data.cc  raw_data.h
src/dist_genie/: CMakeLists.txt  README.md  file.cu  file.h  online.cu  parser.cu  parser.h  scheduler.cc  search.cu  search.h
src/genie/: GPUGenie.h  genie.cu  genie.h
src/genie_cli/: CMakeLists.txt
src/perf_toolkit/: CMakeLists.txt  perftoolkit.cu  table_analyzer.hpp
src/perftoolkit/: perftoolkit.cu  table_analyzer.hpp
src/tool/: converter.h  csv.cc  parser.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  makefile  readme.txt  test_1.cc  test_1.cu  test_10.cu  test_11.cu  test_12.cu  test_13.cu  test_14.cu  test_15.cu  test_16.cu  test_17.cu  test_18.cu  test_19.cu  test_2.cu  test_3.cu  test_4.cu  test_5.cu  test_6.cu  test_7.cu  test_8.cu  test_9.cu  test_binary_input_multiload.cu  test_binary_input_sift_data.cu  test_binary_input_tweets.cu  test_compression_codecs.cu  test_compression_kernels.cu  test_compression_naive.cu  test_compression_query.cu  test_compression_test.cu  test_csv_input_multiload.cc  test_csv_input_multiload.cu  test_csv_input_sift_data.cc  test_csv_input_sift_data.cu  test_csv_input_tweets.cc  test_csv_input_tweets.cu  test_csv_multiload_tweets.cc  (+19 more)
test/container/: test_raw_data.cc
test/parser/: test_csv.cc
test/tool/: test_csv.cc  test_s2.cc
(+328 files in other folders)
